Update Daily Note

--- a/content/Daily-Notes/2024-12-10.md
+++ b/content/Daily-Notes/2024-12-10.md
@@ -46,7 +46,11 @@ Great idea love it.
 `Tue, 12/10/2024, 09:26`
 Katie suggested getting into the [TikTok referral program]( [https://www.tiktok.com/ug/incentive/share/tts_coupon_referral?__status_bar=true&hide_nav_bar=1&should_full_screen=1&sharer_biz=ug_paid_acquisition&_pia_=1&aid=1233&region=us&share_time=1733845682685&_d=eeej0acjb50i5e&sharer_os=ios&u_code=NzA0MjEwOTIyOTQ5ODUzMjg3MA%3D%3D&et_campaign=tt_referral&et_gameplay=tts_coupon_referral&og_image=https://p16-ug-incentive-va.tiktokcdn.com/tos-maliva-i-68e3t9dfc1-us/1f062f50508a4d319d6b1d73c1305f62.png~tplv-68e3t9dfc1-image.image&utm_campaign=client_share&utm_source=copy&share_app_id=1233](https://www.tiktok.com/ug/incentive/share/tts_coupon_referral?__status_bar=true&hide_nav_bar=1&should_full_screen=1&sharer_biz=ug_paid_acquisition&_pia_=1&aid=1233&region=us&share_time=1733845682685&_d=eeej0acjb50i5e&sharer_os=ios&u_code=NzA0MjEwOTIyOTQ5ODUzMjg3MA%3D%3D&et_campaign=tt_referral&et_gameplay=tts_coupon_referral&og_image=https://p16-ug-incentive-va.tiktokcdn.com/tos-maliva-i-68e3t9dfc1-us/1f062f50508a4d319d6b1d73c1305f62.png~tplv-68e3t9dfc1-image.image&utm_campaign=client_share&utm_source=copy&share_app_id=1233))
 
+`Tue, 12/10/2024, 10:07`
+Katie shared this link:[https://www.gloryordeathrecords.com/liquid-filled](https://www.gloryordeathrecords.com/liquid-filled)
 
+`Tue, 12/10/2024, 10:09`
+We should have a follow list. A whole list of people to link into to get your algorithm up with people to follow in our network.
 
 
 
