Update Daily Note

--- a/content/Daily-Notes/2024-12-10.md
+++ b/content/Daily-Notes/2024-12-10.md
@@ -52,6 +52,29 @@ Katie shared this link:[https://www.gloryordeathrecords.com/liquid-filled](https
 `Tue, 12/10/2024, 10:09`
 We should have a follow list. A whole list of people to link into to get your algorithm up with people to follow in our network.
 
+`Tue, 12/10/2024, 18:14`
+I did it
+I went on TikTok live and hung out with people. I held a boundary against someone who was disrespecting me and science (they said "I have a resentment toward science" and I said "then we are not going to see eye to eye. Please stop, you're welcome to stay and learn, but if you keep commenting these kind of things, I will remove you." and he kept commenting so I blocked him)
+
+I also finished my website's base implementation. I have everything I need now to scale. Look! It's sick!
+
+
+![[Screen Shot 2024-12-10 at 6.14.37 PM.png]]
+![[Screen Shot 2024-12-10 at 6.16.29 PM.png]]
+![[Screen Shot 2024-12-10 at 6.16.52 PM.png]]
+
+I troubleshot the newsletter component while I was on live, and we had a great philosophical conversation about AI, robots, tech, the Singularity, all of that and SO much more.
+
+I feel fucking AMAZING. This is it man. This is purpose. This is what I want to do. I have it. I finally have it.
+
+I'm content. Finally. Fucking shit.
+
+I have everything I need to scale into whatever I want. 
+
+Shit man.
+
+Let's do this :)
+
 
 
 
