Update Index with Correct Date

--- a/content/Daily-Notes/2024-12-10.md
+++ b/content/Daily-Notes/2024-12-10.md
@@ -76,6 +76,18 @@ Shit man.
 Let's do this :)
 
 
+`Tue, 12/10/2024, 22:52`
+It's working. Holy shit. I've gained 3000 new followers from my [[Google Willow ]] video.
+
+My homies were chilling on the patio and one of them stopped me to tell me her boss at the dispensary shared my video on his story. 
+
+She said she was scrolling along and then saw my face, did a double take, then laughed until she saw how many views the video had.
+
+`Tue, 12/10/2024, 22:53`
+1.5 million views as of writing this.
+
+Crazy to think about 1.5 million people seeing my face in the past 24 hours.
+
 
 
 
