Upload Daily Note

--- a/content/Daily-Notes/2024-12-10.md
+++ b/content/Daily-Notes/2024-12-10.md
@@ -89,6 +89,11 @@ She said she was scrolling along and then saw my face, did a double take, then l
 Crazy to think about 1.5 million people seeing my face in the past 24 hours.
 
 
+`Tue, 12/10/2024, 23:06`
+And now I'm updating the [[Surviving the Singularity]] website. Kapow
+
+So much going on, but so much done in so little time with such little work
+
 
 
 
