Update Daily Note

--- a/content/Daily-Notes/2024-12-11.md
+++ b/content/Daily-Notes/2024-12-11.md
@@ -57,7 +57,172 @@ https://hackmd.io/@OAqL23fzTuuf-p47_5thQA/rJ9RC_vEkx
 Look into this one there's a significant chance this will work for me:
 https://www.grants.gov/search-results-detail/357664
 
-The government has grants for minorities, women, victimized communities, people who experienced specific events, ethnic communities, and specific outcomes that the government wants to see happen.
+The government has grants for small businesses, minorities, women, victimized communities, people who experienced specific events, ethnic communities, and specific outcomes that the government wants to see happen.
+
+>"*High impact interdisciplinary studies into..."*
+>*"National Institute of Bla Bla Bla funding to expand understanding about biomechanical function of..."
+
+#### We are NOT a 501(c)3
+Could we stand up a 501(c)3 really quickly? Yes, absolutely. Would it be worth it? Only if we have a specific grant we're relatively certain we could get.
+
+There are MANY and funding for certain things is not likely to dry up.
+
+For example:
+#### Addressing Food Deserts
+That's it. That's the mission. That's the calling.
+
+I'm going to use automation to feed more people and address food deserts through a 501(c)3. Maybe the[[18 Oaks Foundation]]. Maybe something else. Idk. I think I want 18 Oaks to stand as my estate, my legacy org.
+
+# Funding Options for Me
+
+#### NSF 24-579: NSF Small Business Innovation Research / Small Business Technology Transfer Phase I Programs
+https://new.nsf.gov/funding/opportunities/sbirsttr-phase-i-nsf-small-business-innovation-research-small-business/nsf24-579/solicitation
+
+# NSF Small Business Innovation Research (SBIR) and Small Business Technology Transfer (STTR) Phase I Programs  
+**Solicitation NSF 24-579**
+
+## Program Objectives:
+- **Stimulate Technological Innovation:** Encourage small businesses to engage in federal R&D with commercialization potential.
+- **Strengthen the Role of Small Business:** Foster participation of small businesses in meeting federal R&D needs.
+- **Increase Private Sector Commercialization:** Promote the transition of innovative technologies into the marketplace.
+
+## Eligibility Criteria:
+- **Small Business Concern (SBC):** 
+  - For-profit organizations with ≤500 employees, primarily located in the U.S.
+  - At least 51% owned by U.S. citizens or permanent residents.
+- **Principal Investigator (PI):** Must be primarily employed by the SBC during the project.
+- **Project Pitch Requirement:** A mandatory Project Pitch submission to determine program fit.
+
+## Funding Details:
+- **Phase I Award Amount:** Up to $305,000, including direct and indirect costs, and a small business fee.
+- **Project Duration:** 6 to 18 months.
+- **Technical and Business Assistance (TABA):** Up to $6,500 for commercialization activities.
+- **National I-Corps™ Training:** $25,000 allocation recommended for entrepreneurial training.
+
+## Application Process:
+1. **Project Pitch Submission:** Outline the project’s objectives and innovation potential.
+2. **Invitation to Submit Full Proposal:** Extended upon approval of the Project Pitch.
+3. **Full Proposal Submission:** Include:
+   - Project description
+   - Budget justification
+   - Commercialization plan
+   - Biographical sketches of key personnel
+4. **Submission Platform:** Research.gov
+
+## Key Deadlines:
+- **Submission Windows:**
+  - September 18, 2024
+  - November 6, 2024
+  - March 5, 2025
+  - July 2, 2025
+  - November 5, 2025
+- **Proposal Submission Time:** By 5:00 PM local time of the submitting organization.
+
+## Review Criteria:
+- **Intellectual Merit:** Advances knowledge and understanding within or across fields.
+- **Broader Impacts:** Benefits society and contributes to desired societal outcomes.
+
+## Additional Considerations:
+- **Confidentiality:** Proposals are confidential, reviewed by NSF staff and bound reviewers.
+- **Data Rights:** SBIR/STTR data rights protect project-generated data.
+- **Commercialization Focus:** Strong emphasis on commercialization potential and societal impact.
+
+## Alignment with Your Initiatives:
+- **Johnny Autoseed:** Developing AI-driven agricultural solutions aligns with the program's focus on innovative technologies with commercial potential.
+- **Multiverse School:** Creating educational platforms or tools with emerging technologies could fit well.
+
+## Next Steps:
+1. **Prepare and Submit a Project Pitch:** Clearly articulate the innovation, technical objectives, and potential commercial impact.
+2. **Develop Full Proposal (Upon Invitation):** Include details on technical approach, commercialization strategy, and team qualifications.
+3. **Engage in I-Corps™ Training:** Allocate budget for and participate in entrepreneurial training to enhance commercialization readiness.
+
+For detailed information, refer to the [NSF 24-579 Solicitation Document](https://new.nsf.gov/funding/opportunities/sbirsttr-phase-i-nsf-small-business-innovation-research-small-business/nsf24-579/solicitation).
+
+
+### Organic Agriculture Research and Extension Initiative (USDA-NIFA)
+https://www.nifa.usda.gov/grants/funding-opportunities/organic-agriculture-research-extension-initiative
+
+https://www.nifa.usda.gov/sites/default/files/2023-11/FY24-OREI-RFA-P.pdf
+
+![[FY24-OREI-RFA-P.pdf]]
+
+# Organic Agriculture Research and Extension Initiative (OREI)  
+**USDA-NIFA**
+
+## Program Objectives:
+- **Solve Critical Organic Agriculture Issues:** Support research, education, and extension activities that address significant organic farming challenges.
+- **Enhance Organic Producers' Capabilities:** Help producers and processors grow and market high-quality organic products.
+- **Emphasize Practical Applications:** Focus on projects that deliver research-based information to organic producers, including whole farm planning.
+
+## Eligibility Criteria:
+- **Eligible Applicants:**
+  - State agricultural experiment stations
+  - Colleges and universities
+  - University research foundations
+  - Federal agencies and national laboratories
+  - Private organizations, foundations, or corporations
+  - Individuals who are U.S. citizens or nationals
+  - Groups consisting of two or more eligible entities
+
+## Funding Details:
+- **Total Program Funding:** $44,000,000
+- **Award Range:**
+  - Minimum: $50,000
+  - Maximum: $3,500,000
+- **Cost Sharing:** Not required.
+- **Funding Duration:** Up to four years.
+
+## Application Requirements:
+1. **Project Types:**
+   - Must integrate research, education, and extension activities.
+   - Fieldwork must be conducted on certified organic land or land transitioning to organic certification.
+2. **Proposal Components:**
+   - **Project Narrative:** Detailed explanation of objectives, methods, and expected outcomes.
+   - **Budget Justification:** Allocation of funds to key activities.
+   - **Data Management Plan:** How data will be shared and managed.
+   - **Logic Model:** Visualization of the project's inputs, activities, outputs, and outcomes.
+   - **Letters of Support:** From partners, collaborators, or institutions.
+3. **Submission Platform:** Grants.gov
+
+## Key Deadlines:
+- **FY 2025 Application Deadline:** February 13, 2025
+- **Archive Date:** March 15, 2025
+
+## Review Criteria:
+- **Relevance:** How well the project addresses critical organic agriculture priorities.
+- **Technical Merit:** Scientific quality and feasibility of the research plan.
+- **Outreach and Education:** Potential to deliver practical solutions to farmers and other stakeholders.
+- **Partnerships:** Engagement with certified organic producers or transitioning operations.
+
+## Priority Areas:
+- Enhancing organic farming systems and practices.
+- Developing innovative technologies and strategies to improve organic production.
+- Addressing pest management, soil health, and crop rotation.
+- Facilitating market development for organic products.
+
+## Additional Considerations:
+- **Collaboration:** Projects involving multiple stakeholders (e.g., universities, producers) are encouraged.
+- **Community Impact:** Proposals should demonstrate tangible benefits for organic producers and their communities.
+- **Compliance with USDA National Organic Program Standards:** Projects must adhere to these standards for certification.
+
+## Alignment with Your Initiatives:
+- **Johnny Autoseed:** This grant is a perfect fit for your sustainability and organic agriculture goals.
+  - Example Project: Develop an AI-driven tool to assist organic farmers with crop planning and soil health monitoring.
+  - Include partnerships with certified organic producers for credibility and field-testing.
+
+## Next Steps:
+1. **Define the Project Scope:** Outline a project that integrates research, education, and extension activities aligned with organic farming challenges.
+2. **Identify Collaborators:** Secure partnerships with organic producers, universities, or research organizations.
+3. **Draft the Proposal:** Use USDA’s proposal format to include a detailed narrative, budget plan, and impact metrics.
+4. **Submit Application via Grants.gov:** Ensure compliance with all USDA-NIFA requirements.
+
+For detailed information, visit the [OREI Program Page](https://www.nifa.usda.gov/grants/funding-opportunities/organic-agriculture-research-extension-initiative) and refer to the [FY 2024 RFA Document](https://www.nifa.usda.gov/sites/default/files/2023-11/FY24-OREI-RFA-P.pdf).
+
+`Wed, 12/11/2024, 15:10`
+Got my targets. Let's reverse engineer the path to get that monayyyyyyyyy   $ $ $ $ $ $
+
+
+
 
 
 
