Update Index Date

--- a/content/Daily-Notes/2024-12-11.md
+++ b/content/Daily-Notes/2024-12-11.md
@@ -221,6 +221,8 @@ For detailed information, visit the [OREI Program Page](https://www.nifa.usda.go
 `Wed, 12/11/2024, 15:10`
 Got my targets. Let's reverse engineer the path to get that monayyyyyyyyy   $ $ $ $ $ $
 
+`Wed, 12/11/2024, 16:04`
+>Liz: Quantum computers are worse than crypto.
 
 
 
