Upload Daily Note

--- a/content/Daily-Notes/2024-12-14.md
+++ b/content/Daily-Notes/2024-12-14.md
@@ -31,7 +31,48 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-14]]'
 
 ## 📝 Daily Reflections
 
-< Write Here >
+`Sat, 12/14/2024, 14:14`
+Here's a note
+
+`Sat, 12/14/2024, 14:14`
+Helped Elo set up his cool ass projects for his presents for people in his life.
+
+`Sat, 12/14/2024, 16:06`
+The [[Mutiny Robotics]] angle is to allow a vehicle to repurpose used and outdated robot arms.
+
+We can funnel the used parts from Mutiny into [[Johnny Autoseed]]
+
+`Sat, 12/14/2024, 16:08`
+To do: Give Liz a KPI for what I can do on YouTube and she will put a dollar value on it.
+We agreed that 
+
+`Sat, 12/14/2024, 16:20`
+[[AI Insights and Daily Log Analysis]]
+Claude [[MCP]] can do a LOT of work. DAMN
+
+That analysis was done by Claude. This is insane.
+
+`Sat, 12/14/2024, 17:11`
+Ok we got the Johnny Autoseed page live on The Multiverse School here:
+https://themultiverse.school/x/johnny-autoseed
+
+And we got the project link live on my website
+![[Screen Shot 2024-12-14 at 5.12.17 PM.png]]
+
+Now I'm working on the navbar, just tidying things up...
+
+`Sat, 12/14/2024, 17:12`
+
+
+
+
+
+
+---
+
+# Fartbucket
+[[Characters/Fartbucket-Character-Sheet|🎲 Fartbucket's Character Sheet]]
+
 
 ---
 
