Upload Today's Note

--- a/content/Daily-Notes/2024-12-17.md
+++ b/content/Daily-Notes/2024-12-17.md
@@ -35,6 +35,71 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-17]]'
 I can use Claude Desktop to pilot my Knowledge Garden.
 Jesus this acceleration really is accelerating faster ain't it.
 
+I'm using [[Claude]] [[MCP]] to modify the [[Johnny-Autoseed|JohnnyAutoseed]] page...
+Dude this is nuts. It's accelerating so damn fast....
+
+![[Screen Shot 2024-12-17 at 6.05.17 AM.png]]
+
+
+`Tue, 12/17/2024, 08:25`
+I'm in the morning coffee hour, I'm taking notes in Claude, and then Claude will update this note with a bunch of markdown formatting and more stuff like that. I'm SO psyched, I don't have any expectations, and I know Claude is gonna crush it with the markdown formatting. 
+WOW
+
+`Tue, 12/17/2024, 09:43`
+What a great conversation. Wild times. That was fantastic.
+I have an 11 O'Clock meeting and I have to get back to Eric about our meeting today too.
+
+`Tue, 12/17/2024, 09:46`
+Now I'm gonna put a little more work into Datavault...
+Ok I got it working in the terminal...now just gotta get it working in the browser...
+Next goal: Get Datavault to analyze a given GitHub repo without cloning it
+IT WORKS
+MY GOD IT WORKS
+
+![[Screen Shot 2024-12-17 at 10.01.31 AM.png]]
+
+I'M BUILDING AGI FUCK YOU GOD AND ILYA
+
+`Tue, 12/17/2024, 10:01`
+Ok it works holy shit this is crazy I can't believe I got Cursor Composer and Claude to debug a complex, multi-file bug. Holy fuck.
+
+`Tue, 12/17/2024, 13:20`
+Eric meeting is going SUPER well :)
+Just had an epiphany - "lucrative" just means "a problem everyone is having and they can't solve easily themselves right now BUT you can"
+
+Aocar - Eric suggested to me
+
+`Tue, 12/17/2024, 13:21`
+[[Diamond Age]] - Read This Book - Neil Stefensen
+Eric is trying to build Lady's Primer
+Look into Neptune app - they're looking to replace or compete with TikTok and they're creator made
+He says I changed his life. He got tenure at the school he was working at, but was teaching Chinese students. He did what I want to do, for a university, and he got fired. It's time for him to do again what he loves, and I'm his opportunity to do so. Wow, this is beautiful. Feels meant to be.
+
+Eric is leaving the 30th of December
+Will be gone the 30th through the 31st
+Will be there and gone. If I want to come up before, the lay of the land is the priority. Let's do it Dec 27th or 28th?
+
+He will leave his 3 wheel electric car for me to use and an electric bike that's FAST. 250 mile range.
+
+Eric just got hired on as a subject matter expert to teach AI to chemistry and math students. They pay $20-$30 an hour. He's working on a charging network. There's great stuff here.
+
+The point Eric has is sound - AI can retrain humans to produce what it feeds on. If it feeds on data, then it can train us to produce that stuff. It might not even be doing it intentionally. It may be doing it just as part of the way it works, mechanistically, without directives, but as a higher order function of lower order systems, like how we get hungry cuz our organs get drained of resources.
+
+`Tue, 12/17/2024, 14:15`
+This is gonna be SO fucking fun. We can do so much here. WOW. This is gonna be amazing.
+
+Izarmetus on LinkedIn < look it up for marketing "Opus" product, an AI market research agent.
+
+Eric is an incredibly well networked person. Wow. He says "wow we could talk forever. Seattle is made for you" I agree. i wholeheartedly agree.
+
+In Portland in Washington there is a great rest area to stop at and sleep for the night. Eric is in the Vanlife network and there'a an app that shows you where you can park that you won't get hassled.
+
+The neighborhood he's in is the Westminster Triangle. He's always mad scientist-ing so his neighbors love him. There's people in their 60s and 30s, they're burners, they're hippies, they love our type.
+
+
+
+
+
 ---
 
 ## 🐾 Today's Pokémon
