Update Today's Note

--- a/content/Daily-Notes/2024-12-18.md
+++ b/content/Daily-Notes/2024-12-18.md
@@ -34,6 +34,50 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-18]]'
 `Wed, 12/18/2024, 09:35`
 Ben says there is a massive change in the world order and some serious and significant power vacuums are being created. AI will eventually be self-replicating and autonomous and capable of building its own body. We will need to be part of community. People who are part of communities will be ok. We need to support one another, normalize meeting offline - ideally without your phone around. 
 Getting used to meeting offline and discussing current events is critical. 
+Solving the problem of "How do we know who we're talking to?" "How do we know we're talking to a person?" < mentioning something you talked about offline, or something that didn't happen usually works.
+
+### Opportunity - Emergency Preparedness Plan Product for Surviving the Singularity
+---
+Just realized this is literally baked in.
+It's an emergency preparedness plan for the Singularity. How to survive the worst case scenarios.
+- Make it like 1950s survival guide illustration style
+- Ikea manual icon style
+- Zombie survival manual inspiration
+- Computers for Dummies
+
+`Wed, 12/18/2024, 12:18`
+Ok we did it.
+Claude MCP has a connection to Datavault
+It's about to get REALLY weird over here...[[JARVIS]] here we come!
+
+I was able to pull a random document a random text document that I created with Claude on my desktop in my desktop folder just by talking to it. 
+
+So I was able to use the Apple speech to text software that's on my MacBook to talk to my computer to input text into the Claude desktop app I was then able to tell the Claude desktop app to create a file with my thoughts and then add it to the data vault so there's many different ways that I can do this now I can literally just use the file reading and writing MCP server tools that go into Claude to edit documents with my voice on the fly or I could use the data vault to analyze directories and then I can pull data into the data vault. 
+
+I can tell the MCP server to point it's attention at any folder and any folder can be my data vault which means that I can have an obsidian vault with courts for publishing automatically set up with a server so that I can have a pipeline where my thoughts can be recorded by voice put into Clyde or open AI or whatever and then through an API I can publish my thoughts directly to the web I could even create like an auto GEN workflow that goes along with all of this and by using the auto GEN Microsoft framework I could have agents automatically going out into the web and finding data for me so with this system I can fire off of 
+a command with my voice and have AI create like a 3-D model off of my printer!!!
+
+`Wed, 12/18/2024, 12:36`
+I don't understand how people don't see how this is going to create unbelievable abundance for everyone
+I really truly don't understand how people don't understand!
+
+Like it took me a year maybe less to figure out how to do this stuff. It's like people have no imagination. It's really kind of sad.
+
+`Wed, 12/18/2024, 13:54`
+Love it. Look what I got done:
+- Johnny Autoseed is live and the website is getting waitlist signups
+- thecoffeejesus.com is live and the newsletter is getting signups
+- I am moving to Seattle officially on Dec 27th! People think it means I'm going to be gone forever. They have NO concept of how I'm about to be living. They can't let themselves believe they actually have agency and autonomy in their lives. They're ALL panicked and terrified of what happens if daddy and mommy Government and Private Equity stop providing for their every need and making life perfect and easy for them
+- I'm starting to understand Libertarianism. I'm NOT a Libertarian, I'm definitely not that big of an asshole, but I do understand why people start leaning that way - getting tired of people complaining about things they have control over and wanting to stop dealing with everybody else's bullshit that you've already solved eons ago
+- I got Claude MCP popping. Added 62 new tools. This makes sense. It's gonna get weird.
+- AI powered Operating Systems are here. All these jamokes who think that learning how to code AutoGen is gonna guarantee them a job are completely, fundamentally misunderstanding the situation
+![[Screen Shot 2024-12-18 at 1.54.28 PM.png]]
+
+`Wed, 12/18/2024, 14:01`
+[[Johnny Autoseed]] is gonna make me rich.
+
+Robot gardeners. Two simple words. So easy...
+
 
 ---
 
