Update Daily Note - NovaSystem Lives

--- a/content/Daily-Notes/2024-12-18.md
+++ b/content/Daily-Notes/2024-12-18.md
@@ -8,9 +8,13 @@ ai_convos:
   - '[[AI Chats/Chat0001-12182024]]'
 work_efforts:
   - '[[Work-Efforts/WE0001-12182024]]'
-related_notes: '[[AI News/AI-News-2024-12-18]]'
+related_notes:
 newsletter: '[[Newsletters/NovaBrew-2024-12-18]]'
 ---
+✅ Created aiNews: AI News/AI-News-2024-12-18.md
+⏭️ chat already exists: AI Chats/Chat0001-12182024.md
+⏭️ workEffort already exists: Work-Efforts/WE0001-12182024.md
+⏭️ newsletter already exists: Newsletters/NovaBrew-2024-12-18.md
 # Wednesday, December 18, 2024
 > Week 51 of 2024 • Q4
 
@@ -21,7 +25,7 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-18]]'
 - 📅 **Week:** 51 of 52
 - 📊 **Quarter Progress:** 79 of 92 (86%)
 - 🎯 **Days until EOY:** 12
-- 🔄 **Created at:** 8:26 AM
+- 🔄 **Created at:** 6:24 PM
 
 
 # 📰 AI News
@@ -31,68 +35,122 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-18]]'
 
 ## 📝 Daily Reflections
 
-`Wed, 12/18/2024, 09:35`
-Ben says there is a massive change in the world order and some serious and significant power vacuums are being created. AI will eventually be self-replicating and autonomous and capable of building its own body. We will need to be part of community. People who are part of communities will be ok. We need to support one another, normalize meeting offline - ideally without your phone around. 
-Getting used to meeting offline and discussing current events is critical. 
-Solving the problem of "How do we know who we're talking to?" "How do we know we're talking to a person?" < mentioning something you talked about offline, or something that didn't happen usually works.
 
-### Opportunity - Emergency Preparedness Plan Product for Surviving the Singularity
+`Wed, 12/18/2024, 09:35` Ben says there is a massive change in the world order and some serious and significant power vacuums are being created. AI will eventually be self-replicating and autonomous and capable of building its own body. We will need to be part of community. People who are part of communities will be ok. We need to support one another, normalize meeting offline - ideally without your phone around. Getting used to meeting offline and discussing current events is critical. Solving the problem of “How do we know who we’re talking to?” “How do we know we’re talking to a person?” < mentioning something you talked about offline, or something that didn’t happen usually works.
+
+### Opportunity - Emergency Preparedness Plan Product for Surviving the Singularity[](https://aiecotech.org/Daily-Notes/2024-12-18#opportunity---emergency-preparedness-plan-product-for-surviving-the-singularity)
+
 ---
-Just realized this is literally baked in.
-It's an emergency preparedness plan for the Singularity. How to survive the worst case scenarios.
+
+Just realized this is literally baked in. It’s an emergency preparedness plan for the Singularity. How to survive the worst case scenarios.
+
 - Make it like 1950s survival guide illustration style
 - Ikea manual icon style
 - Zombie survival manual inspiration
 - Computers for Dummies
 
-`Wed, 12/18/2024, 12:18`
-Ok we did it.
-Claude MCP has a connection to Datavault
-It's about to get REALLY weird over here...[[JARVIS]] here we come!
+`Wed, 12/18/2024, 12:18` Ok we did it. Claude MCP has a connection to Datavault It’s about to get REALLY weird over here…[JARVIS](https://aiecotech.org/JARVIS) here we come!
 
-I was able to pull a random document a random text document that I created with Claude on my desktop in my desktop folder just by talking to it. 
+I was able to pull a random document a random text document that I created with Claude on my desktop in my desktop folder just by talking to it.
 
-So I was able to use the Apple speech to text software that's on my MacBook to talk to my computer to input text into the Claude desktop app I was then able to tell the Claude desktop app to create a file with my thoughts and then add it to the data vault so there's many different ways that I can do this now I can literally just use the file reading and writing MCP server tools that go into Claude to edit documents with my voice on the fly or I could use the data vault to analyze directories and then I can pull data into the data vault. 
+So I was able to use the Apple speech to text software that’s on my MacBook to talk to my computer to input text into the Claude desktop app I was then able to tell the Claude desktop app to create a file with my thoughts and then add it to the data vault so there’s many different ways that I can do this now I can literally just use the file reading and writing MCP server tools that go into Claude to edit documents with my voice on the fly or I could use the data vault to analyze directories and then I can pull data into the data vault.
 
-I can tell the MCP server to point it's attention at any folder and any folder can be my data vault which means that I can have an obsidian vault with courts for publishing automatically set up with a server so that I can have a pipeline where my thoughts can be recorded by voice put into Clyde or open AI or whatever and then through an API I can publish my thoughts directly to the web I could even create like an auto GEN workflow that goes along with all of this and by using the auto GEN Microsoft framework I could have agents automatically going out into the web and finding data for me so with this system I can fire off of 
-a command with my voice and have AI create like a 3-D model off of my printer!!!
+I can tell the MCP server to point it’s attention at any folder and any folder can be my data vault which means that I can have an obsidian vault with courts for publishing automatically set up with a server so that I can have a pipeline where my thoughts can be recorded by voice put into Clyde or open AI or whatever and then through an API I can publish my thoughts directly to the web I could even create like an auto GEN workflow that goes along with all of this and by using the auto GEN Microsoft framework I could have agents automatically going out into the web and finding data for me so with this system I can fire off of a command with my voice and have AI create like a 3-D model off of my printer!!!
 
-`Wed, 12/18/2024, 12:36`
-I don't understand how people don't see how this is going to create unbelievable abundance for everyone
-I really truly don't understand how people don't understand!
+`Wed, 12/18/2024, 12:36` I don’t understand how people don’t see how this is going to create unbelievable abundance for everyone I really truly don’t understand how people don’t understand!
 
-Like it took me a year maybe less to figure out how to do this stuff. It's like people have no imagination. It's really kind of sad.
+Like it took me a year maybe less to figure out how to do this stuff. It’s like people have no imagination. It’s really kind of sad.
 
-`Wed, 12/18/2024, 13:54`
-Love it. Look what I got done:
+`Wed, 12/18/2024, 13:54` Love it. Look what I got done:
+
 - Johnny Autoseed is live and the website is getting waitlist signups
 - thecoffeejesus.com is live and the newsletter is getting signups
-- I am moving to Seattle officially on Dec 27th! People think it means I'm going to be gone forever. They have NO concept of how I'm about to be living. They can't let themselves believe they actually have agency and autonomy in their lives. They're ALL panicked and terrified of what happens if daddy and mommy Government and Private Equity stop providing for their every need and making life perfect and easy for them
-- I'm starting to understand Libertarianism. I'm NOT a Libertarian, I'm definitely not that big of an asshole, but I do understand why people start leaning that way - getting tired of people complaining about things they have control over and wanting to stop dealing with everybody else's bullshit that you've already solved eons ago
-- I got Claude MCP popping. Added 62 new tools. This makes sense. It's gonna get weird.
-- AI powered Operating Systems are here. All these jamokes who think that learning how to code AutoGen is gonna guarantee them a job are completely, fundamentally misunderstanding the situation
-![[Screen Shot 2024-12-18 at 1.54.28 PM.png]]
+- I am moving to Seattle officially on Dec 27th! People think it means I’m going to be gone forever. They have NO concept of how I’m about to be living. They can’t let themselves believe they actually have agency and autonomy in their lives. They’re ALL panicked and terrified of what happens if daddy and mommy Government and Private Equity stop providing for their every need and making life perfect and easy for them
+- I’m starting to understand Libertarianism. I’m NOT a Libertarian, I’m definitely not that big of an asshole, but I do understand why people start leaning that way - getting tired of people complaining about things they have control over and wanting to stop dealing with everybody else’s bullshit that you’ve already solved eons ago
+- I got Claude MCP popping. Added 62 new tools. This makes sense. It’s gonna get weird.
+- AI powered Operating Systems are here. All these jamokes who think that learning how to code AutoGen is gonna guarantee them a job are completely, fundamentally misunderstanding the situation ![](https://aiecotech.org/static/Screen-Shot-2024-12-18-at-1.54.28-PM.png)
 
-`Wed, 12/18/2024, 14:01`
-[[Johnny Autoseed]] is gonna make me rich.
+`Wed, 12/18/2024, 14:01` [Johnny Autoseed](https://aiecotech.org/30-Projects/33-JohnnyAutoseed/Johnny-Autoseed) is gonna make me rich.
 
-Robot gardeners. Two simple words. So easy...
+Robot gardeners. Two simple words. So easy…
+
+`Wed, 12/18/2024, 19:21`
+I got my API scripts working. Holy fucking shit dude. The acceleration is REAL
+Now when I open my Daily Note, a Templater script will fire that creates 4 unique notes for the day.
+Inside each note there are more [[Templater]] scripts that fire that perform async API calls that retrieve data from elsewhere.
+For example, one of the scripts uses the NewsAPI to get the day's AI headlines and adds them and the links to the articles to my Daily Note automatically.
+I can do this for literally anything. Any API can be integrated directly into my Obsidian, my Daily Notes, and my devlog website at https://aiecotech.org
+
+`Wed, 12/18/2024, 19:36`
+Ludicrous. Tis simply a ruse. A silly little game that's all it is.
+I can play adult legos now all day long. I understand enough to put the block together.
+I can hook together any API on the web to my own fucking Obsidian vault.
+Holy shit dude.
+That's a lot to process.
+I've got everything now. Look at it. Here's the whole happy family:
+
+https://thecoffeejesus.com
+https://johnnyautoseed.com
+https://survivingthesingularity.com
+https://themultiverse.school
+https://novasystem.io
+https://aiecotech.org
+https://escapecapitalism.org
+
+Those seven little websites will allow me to save my loved ones from the worst parts of the world. I can protect the people I love with the resources acquired from these sources. And I can give back to the world and (hopefully) leave it a better place than I found it when I eventually leave.
+
+`Wed, 12/18/2024, 19:43`
+Ok didn't realize it was down I'm getting Novasystem.io spun up one sec...
+
+`Wed, 12/18/2024, 20:23`
+![[Screen Shot 2024-12-18 at 8.23.06 PM.png]]
+There it is.
+
+![[Pasted image 20241218202510.png]]
+![](https://y.yarn.co/75d4c6ca-50f2-4800-998f-427dd1822997_text.gif)
+
+NovaSystem can send emails now.
+NovaSystem.
+Can send.
+Emails.
+
+After almost a full 2 years of work...NovaSystem can send emails.
+
+Holy fuck.
+![[Screen Shot 2024-12-18 at 8.28.05 PM.png]]
+
+It's...it's beautiful.
+
+`Wed, 12/18/2024, 20:28`
+This really is the start of something beautiful
+
+There it is.
+You did it bro. You did it.
+
+Email. Newsletter. Fully automated. Custom code. From scratch.
+
+This changes everything.
+
+![[Screen Shot 2024-12-18 at 8.29.42 PM.png]]
+
+`Wed, 12/18/2024, 20:30`
+Next big goal: Get my old laptop set up as an email server. Or one of the iPads.
 
 
 ---
 
 ## 🐾 Today's Pokémon
 
-Aromatisse (#683)
+Hitmonlee (#106)
 
-![Aromatisse Sprite](https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/683.png)
+![Hitmonlee Sprite](https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/106.png)
 
-- **Type(s):** fairy
-- **Abilities:** healer, aroma-veil
-- **Stats:** hp: 101, attack: 72, defense: 72, special-attack: 99, special-defense: 89, speed: 29
+- **Type(s):** fighting
+- **Abilities:** limber, reckless, unburden
+- **Stats:** hp: 50, attack: 120, defense: 53, special-attack: 35, special-defense: 110, speed: 87
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
-    
+
 
 ---
 
