--- a/content/Daily-Notes/2024-12-18.md
+++ b/content/Daily-Notes/2024-12-18.md
@@ -136,6 +136,20 @@ This changes everything.
 `Wed, 12/18/2024, 20:30`
 Next big goal: Get my old laptop set up as an email server. Or one of the iPads.
 
+`Wed, 12/18/2024, 21:50`
+https://novasystem.io
+Has a waitlist
+That emails me every time someone signs up
+I feel so fucking cool right now
+
+`Wed, 12/18/2024, 23:16`
+I did it.
+![[Screen Shot 2024-12-18 at 11.16.30 PM.png]]
+
+`Thu, 12/19/2024, 00:19`
+And a bagillion hours later...
+
+
 
 ---
 
